<resources>
    <string name="app_name">Aplikacja_Inzynierska</string>
    <string name="labelmenuglowne">Menu Główne</string>
    <string name="buttondodajrezerwacje">Dodaj rezerwacje</string>
    <string name="buttonwyszukajrezerwacje">Wyszukaj rezerwacje</string>
    <string name="hintImie">Wpisz Imię</string>
    <string name="hintNazwisko">Wpisz Nazwisko</string>
    <string name="editNumerTel">Podaj Numer Telefonu</string>
    <string name="buttonkrok1">Dalej</string>

    <string name="hintdata">Wybierz datę</string>
    <string name="hintczas">Wybierz godzinę</string>
    <string name="Dodaj">Dodaj</string>

    <string name="Firma">Firma</string>
    <string name="hintFirma">Podaj nazwę</string>
    <string name="cykliczna">Cykliczna</string>
    <string name="szukajrezerwacji">Wybierz dzień</string>

    <string-array name="hala">
        <item>Całość</item>
        <item>Połowa</item>

    </string-array>
</resources>
