<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.marcin.aplikacja_inzynierska.DodajRezerwacjeActivity">

    <EditText
        android:id="@+id/editImie"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="30dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="35dp"
        android:ems="10"
        android:hint="@string/hintImie"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editNazwisko"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:ems="10"
        android:hint="@string/hintNazwisko"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="@+id/editImie"
        app:layout_constraintStart_toStartOf="@+id/editImie"
        app:layout_constraintTop_toBottomOf="@+id/editImie" />

    <EditText
        android:id="@+id/editNumerTel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:ems="10"
        android:hint="@string/editNumerTel"
        android:inputType="phone"
        app:layout_constraintEnd_toEndOf="@+id/editNazwisko"
        app:layout_constraintStart_toStartOf="@+id/editNazwisko"
        app:layout_constraintTop_toBottomOf="@+id/editNazwisko" />

    <EditText
        android:id="@+id/czas"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:ems="10"
        android:focusable="false"
        android:hint="@string/hintczas"
        android:inputType="time"
        app:layout_constraintEnd_toEndOf="@+id/data"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/data"
        app:layout_constraintTop_toBottomOf="@+id/data" />

    <EditText
        android:id="@+id/data"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:ems="10"
        android:focusable="false"
        android:hint="@string/hintdata"
        android:inputType="date"
        app:layout_constraintEnd_toEndOf="@+id/editNumerTel"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/editNumerTel"
        app:layout_constraintTop_toBottomOf="@+id/editNumerTel" />

    <Button
        android:id="@+id/buttonkrok1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="96dp"
        android:text="@string/Dodaj"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/czas" />

    <CheckBox
        android:id="@+id/cykliczna"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/cykliczna"
        app:layout_constraintTop_toBottomOf="@+id/spinner"
        tools:layout_editor_absoluteX="30dp" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="0dp"
        android:layout_height="33dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="25dp"
        app:layout_constraintEnd_toEndOf="@+id/czas"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/czas"
        app:layout_constraintTop_toBottomOf="@+id/czas"
        android:layout_marginLeft="8dp" />


</android.support.constraint.ConstraintLayout>
